serv-c/d refactor.