@@ -21,19 +21,22 @@ Run the service using the required JVM arguments:
 export JVM_OPTS="--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
 --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED \
+--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
 --add-opens=java.base/java.lang=ALL-UNNAMED \
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
 --add-opens=java.base/java.io=ALL-UNNAMED \
 --add-opens=java.base/java.util=ALL-UNNAMED \
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
 -XX:+UseZGC -XX:+ZGenerational -Xmx512m -Xms512m \
--XX:+AlwaysPreTouch -XX:+DisableExplicitGC \
--Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider"
+-XX:+AlwaysPreTouch -XX:+DisableExplicitGC"
+# On Linux, scripts/start.sh additionally sets:
+# -Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider
 
-java $JVM_OPTS -cp target/serv-a-1.0-SNAPSHOT.jar:target/dependency/* com.fx.risk.RiskMain
+java $JVM_OPTS -cp target/serv-a-1.0.0-SNAPSHOT.jar:target/dependency/* com.fx.risk.RiskMain
 ```
 
 > [!TIP]
-> **Easier Execution**: Rather than running this manually, use the `scripts/deploy.sh` script from the project root to automatically configure JVM arguments and start all services in the correct order. Use `scripts/test.sh` to diagnose OS-specific JVM properties if needed.
+> **Easier Execution**: Rather than running this manually, use the `scripts/start.sh` script from the project root to automatically configure JVM arguments and start all services in the correct order. Use `scripts/test.sh` to diagnose OS-specific JVM properties if needed.
 
 ---
 
