@@ -22,19 +22,21 @@ Run the service using the required JVM arguments:
 export JVM_OPTS="--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
 --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED \
+--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
 --add-opens=java.base/java.lang=ALL-UNNAMED \
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
 --add-opens=java.base/java.io=ALL-UNNAMED \
 --add-opens=java.base/java.util=ALL-UNNAMED \
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
 -XX:+UseZGC -XX:+ZGenerational -Xmx512m -Xms512m \
 -XX:+AlwaysPreTouch -XX:+DisableExplicitGC \
--Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider"
+-Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider"  # Linux only; scripts/start.sh applies this conditionally via `uname`
 
-java $JVM_OPTS -cp target/serv-c-1.0-SNAPSHOT.jar:target/dependency/* com.fx.persistence.PersistenceMain
+java $JVM_OPTS -cp target/serv-c-1.0.0-SNAPSHOT.jar:target/dependency/* com.fx.persistence.PersistenceMain
 ```
 
 > [!TIP]
-> **Easier Execution**: Rather than running this manually, use the `scripts/deploy.sh` script from the project root to automatically configure JVM arguments and start all services in the correct order. Use `scripts/test.sh` to diagnose OS-specific JVM properties if needed.
+> **Easier Execution**: Rather than running this manually, use the `scripts/start.sh` script from the project root to automatically configure JVM arguments and start all services in the correct order. Use `scripts/test.sh` to diagnose OS-specific JVM properties if needed.
 
 *Note: As a consumer, this service should generally be started **first** so that it establishes its tailer cursor at the end of the queue before producers start writing.*
 
@@ -77,7 +79,7 @@ The serv-c Max of 586 ms and P99.99 of 4.9 ms are the direct observation of this
 | Constant / Setting | Before | After | Effect |
 |---|---|---|---|
 | `BatchPersistenceEngine.RING_SIZE` | 65,536 | **524,288** | ~524 ms burst absorption @ 1M evt/sec; 8× headroom |
-| `BatchPersistenceEngine.MAX_BATCH` | 4,096 | **32,768** | Fewer H2 `commit()` calls per second; lower amortised overhead |
+| `BatchPersistenceEngine.MAX_BATCH` | 32,768 | **8,192** | Bounds a single H2 `executeBatch()`/`commit()` to ~47 ms of events at 175K evt/sec, preventing multi-second commits as `fx_trades` grows past 1M rows (MVStore B-tree depth increases) |
 | Default JDBC URL | H2 1.x params attempted | **Reverted** | `LOG=0`/`UNDO_LOG=0` are unsupported in H2 2.x MVStore; using them breaks the JDBC connection at startup |
 
 > [!NOTE]
